--- a/css/style.css
+++ b/css/style.css
@@ -146,7 +146,7 @@ ol, ul {
 
 /* Blocks */
 .intro {
-  background: url(/img/backgr.png) center;
+  background: url(../img/backgr.png) center;
   background-size: cover;
   width: 100%;
   height: 640px;
@@ -161,7 +161,7 @@ ol, ul {
 }
 @media screen and (max-width: 768px) {
   .intro {
-    background: url(/img/backgr_mob.png) center;
+    background: url(../img/backgr_mob.png) center;
     background-size: cover;
     -webkit-transform-style: flat;
             transform-style: flat;
